<package>
  <name>sphero_description</name>
  <version>0.1.2</version>
  <description>
    sphero_description provides a complete 3D model of the Sphero for simulation and visualization. The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <author>Melonee Wise</author>
  <maintainer email="melonee@meloneewise.com">Melonee Wise</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/sphero_description</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
</package>
